[package]
name = "cpoint-lsp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.2"
dashmap = "5.5.1"
ropey = "1.6.0"
tokio = { version = "1.29.1", features = ["full"] }
tower-lsp = { version = "0.19.0", features = ["proposed"]}
